// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar component Should Exist 1`] = `[Function]`;

exports[`Navbar component Should concat Bulma class with classes in props 1`] = `
<nav
  className="navbar other-class test"
  role="navigation"
  style={Object {}}
>
  Facebook
</nav>
`;

exports[`Navbar component Should have Navbar classname 1`] = `
<nav
  className="navbar"
  role="navigation"
  style={Object {}}
>
  Facebook
</nav>
`;

exports[`Navbar component Should have custom inline styles 1`] = `
<section
  className="navbar"
  role="navigation"
  style={
    Object {
      "width": 200,
      "zIndex": 1,
    }
  }
>
  This should be a section with custom styles
</section>
`;

exports[`Navbar component Should render as an html section 1`] = `
<section
  className="navbar"
  role="navigation"
  style={Object {}}
>
  This should be a section
</section>
`;
